syntax = "proto2";

package binary.wz.proto;
option java_outer_classname = "DataInfo";

message Message {
  enum DataType {
    PersonType = 1;
    DogType = 2;
    CatType = 3;
  }

  required DataType data_type = 1;

  oneof data_body {
    Person person = 2;
    Dog dog = 3;
    Cat cat = 4;
  }
}

message Person {
  optional string name = 1;
  optional int32 age = 2;
  optional string address = 3;
}

message Dog {
  optional string name = 1;
  optional int32 age = 2;
}

message Cat {
  optional string name = 1;
  optional string city = 2;
}
